deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calc-deployment
  namespace: calc-deployment
  labels:
    app: calc-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calc-deployment
  template:
    metadata:
      labels:
        app: calc-deployment
    spec:
      containers:
        - name: calc-deployment
          image: quay.apps.ocp-prod.nnlscience.onmicrosoft.com/datascience/vllm:calc-deploy
          ports:
            - containerPort: 5000
              protocol: TCP
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 750Mi
            limits:
              cpu: '1'
              memory: 1.5Gi
          imagePullSecrets:
            - name: calc-deploy-secret
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: default
