service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calc-deployment
  namespace: calc-deployment
  labels:
    app: calc-deployment
spec:
  selector:
    app: calc-deployment
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: http
