ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calc-deploy
  namespace: calc-deploy
  annotations:
    route.openshift.io/termination: 'edge'
    'haproxy.router.openshift.io/rate-limit-connections': 'true'
    'haproxy.router.openshift.io/ip_whitelist': '10.0.0.0/8'
spec:
  rules:
    - host: apc.apps.ocp-prod.nnlscience.onmicrosoft.com
      http:
        paths:
          - backend:
              service:
                name: calc-deploy
                port:
                  number: 80
            path: /
            pathType: Prefix
